--- a/style.css
+++ b/style.css
@@ -7,3 +7,16 @@
 }
 
 /* -------------------------------------------------------------------------- General Style */
+:root {
+    /* Base font size for the entire website */
+    font-size: 10px;
+
+    /* ------------------------------------- Colors */
+    /* m = modified */
+    /* l = light */
+    /* d = dark */
+
+    --color-primary: hsl(232, 15%, 19%);
+    --color-primary-m-l: hsl(232, 15%, 19%, 0.55);
+    --color-primary-m-d: hsl(232, 15%, 19%, 0.85);
+}
