--- a/style.css
+++ b/style.css
@@ -39,4 +39,26 @@
     --padding-l: calc(3rem + 4vh) + calc(3rem + 4vw);
     --padding-m: calc(2rem + 2vh) + calc(2rem + 2vw);
     --padding-s: calc(1rem + 1vh) + calc(1rem + 1vw);
+
+    /* ------------------------------------------ Font size */
+
+    --font-size-l: calc(1.5rem + 2vw);
+    --font-size-m: calc(1rem + 1.5vw);
+    --font-size-s: calc(1rem + 1vw);
+    --font-size-xs: calc(0.5rem + 0.8vw);
+
+    /* ------------------------------------------- Font Family */
+
+    --font-family-main: "Fredoka", sans-serif;
+    --font-family-sub: "Poppins", sans-serif;
+}
+
+body {
+    font-family: var(--font-family-sub);
+    line-height: 1.5;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: ;
 }
